--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,9 @@ python-dotenv
 psutil
 heroku3
 openai==0.25.0
+youtube_search
+youtube_search_python
+youtube-search-python==1.4.6
+yt-dlp
+youtube-dl
+youtube_search
