--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,33 @@ marshmallow==3.14.1
 umongo==3.0.1
 requests
 bs4
+git+https://github.com/Joelkb/cinemagoer
+Heroku3
+search_engine_parser
+wget
+aiofiles
+ffmpeg-python
+ffmpeg
+youtube_search
+youtube_search_python
+youtube-search-python==1.4.6
+yt-dlp
+youtube-dl
+youtube_search
+requests
+aiohttp==3.7.4
+gTTS
+googletrans==3.1.0a0
+telegraph
+PyPDF2
+ujson
+pyshorteners
+countryinfo
 datetime
 pytz
+dnspython
 aiohttp
-python-dotenv
-psutil
-heroku3
+python-math
+Pillow
+speedtest-cli
 openai==0.25.0
