--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,23 @@ psutil
 heroku3
 gTTS
 PyPDF2
-Fonts
+search_engine_parser
+wget
+aiofiles
+youtube_search
+youtube_search_python
+youtube-search-python==1.4.6
+yt-dlp
+youtube-dl
+youtube_search
+googletrans==3.1.0a0
+telegraph
+ujson
+pyshorteners
+countryinfo
+datetime
+dnspython
+python-math
+Pillow
+speedtest-cli
 openai==0.25.0
