--- a/requirements.txt
+++ b/requirements.txt
@@ -13,24 +13,17 @@ aiohttp
 python-dotenv
 psutil
 heroku3
-gTTS
-PyPDF2
 search_engine_parser
 wget
 aiofiles
 youtube_search
 youtube_search_python
 youtube-search-python==1.4.6
-yt-dlp
-youtube-dl
-youtube_search
-googletrans==3.1.0a0
-telegraph
 ujson
 pyshorteners
 countryinfo
 datetime
-dnspython
+dnspython==2.3.0
 python-math
 Pillow
 speedtest-cli
