--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pyrogram>=2.0.100
+pyrogram>=2.0.30
 tgcrypto
 pymongo[srv]==3.12.3
 motor==2.5.1
@@ -7,11 +7,8 @@ umongo==3.0.1
 requests
 bs4
 git+https://github.com/Joelkb/cinemagoer
+shortzy
 datetime
 pytz
 aiohttp
-python-dotenv
 psutil
-heroku3
-openai==0.25.0
-dnspython==2.3.0
