--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ git+https://github.com/Joelkb/cinemagoer
 shortzy
 datetime
 pytz
-aiohttp
 psutil
 requests
+Flask==2.2.2
+gunicorn==20.1.0
+aiohttp==3.8.1
